addons/k8s-gatekeeper/templates/medtech-onc_information_blocking_prohibited-constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: medtech-onc_information_blocking_prohibited
  annotations:
    rulehub.id: medtech.onc_information_blocking_prohibited
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  crd:
    spec:
      names:
        kind: MedtechOnc_information_blocking_prohibitedConstraint
      validation:
        openAPIV3Schema:
          type: object
          properties:
            # add schema for parameters
            enabled:
              type: boolean
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package rulehub.medtech.onc_information_blocking_prohibited
      import future.keywords.if

      default deny = []

      # Example: deny with a message
      deny[msg] {
        input.review.kind.kind == "Deployment"
        msg := "medtech.onc_information_blocking_prohibited: example violation"
      }
